styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

:root {
  --white: #FFFFFF;
  --grey: #333333;
  --dark-grey: #1F1F1F;
  --off-black: #141414;
  --green: #C5F82A;
}

*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--off-black);
  color: var(--white);
  font-family: 'Inter', sans-serif;
}

.container {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card {
  background-color: var(--dark-grey);
  width: 23.75rem;
  padding: 2.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 0.625rem;
  text-align: center;
  overflow: hidden;
}

.header-wrapper img {
  border-radius: 50%;
  width: 5.5rem;
  margin-bottom: 1.25rem;
}

.header-wrapper {
  margin-bottom: 1.25rem;
}

.header-name {
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  max-height: 4rem;
}

.header-location {
  color: var(--green);
  font-weight: 700;
  font-size: 0.85rem;
  margin-bottom: 0.5rem;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  max-height: 3rem;
}

.socials-btn-wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.description {
  margin-bottom: 1.25rem;
  font-size: 0.875rem;
  opacity: 0.6;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
  max-height: 5rem;
}

.socials-btn-wrapper > button {
  width: 100%;
  padding: 1rem;
  border-radius: 0.5rem;
  border: none;
  background-color: var(--grey);
  color: var(--white);
  cursor: pointer;
  font-weight: 700;
}

.socials-btn-wrapper > button:hover {
  background-color: var(--green);
  color: var(--off-black);
}
@media only screen and (max-width: 600px) {
  .card {
    width: 90%;
  }
}

